--- a/index.html
+++ b/index.html
@@ -1,55 +1,70 @@
----
-title: "README"
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>README</title>
+</head>
+<body>
+    <h1>linuxstudysessions</h1>
+    <p>Study notes for my Linux Essentials certification journey.<br>
+    Guide follows LPI Essentials Study Guide.<br>
+    See Wiki for important links.<br>
+    Browse pages by topics as laid out in study guide.</p>
 
-# linuxstudysessions
-Study notes for my Linux Essentials certification journey.  
-Guide follows LPI Essentials Study Guide.  
-See Wiki for important links.  
-Browse pages by topics as layed out in study guide.
+    <hr>
 
----
+    <h2>Topic 1</h2>
+    <ul>
+        <li><a href="https://bullintheserver.github.io/linuxstudysessions/topic1.html">The Linux Community and a Career in Open Source</a></li>
+        <li><h3>1.1</h3>Linux Evolution and Popular Operating Systems</li>
+        <li><h3>1.2</h3>Major Open Source Applications</a></li>
+        <li><h3>1.3</h3>Open Source Software and Licensing</a></li>
+        <li><h3>1.4</h3>ICT Skills and Working in Linux</a></li>
+    </ul>
 
-## Topic 1
-[The Linux Community and a Career in Open Source](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic1.md#topic-1)
-### 1.1
-[Linux Evolution and Popular Operating Systems](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic1.md#11)
-### 1.2
-[Major Open Source Applications](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic1.md#12)
-### 1.3
-[Open Source Software and Licensing](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic1.md#13)
-### 1.4
-[ICT Skills and Working in Linux](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic1.md#14)
+    <hr>
 
---- 
+    <h2>Topic 2</h2>
+    <ul>
+        <li><a href="https://bullintheserver.github.io/linuxstudysessions/topic2.html">Finding Your Way on a Linux System</a></li>
+        <li><h3>2.1</h3>Command Line Basics</a></li>
+        <li><h3>2.2</h3>Getting Help on the Command Line</a></li>
+        <li><h3>2.3</h3>Using Directories and Listing Files</a></li>
+        <li><h3>2.4</h3>Creating, Moving, and Deleting Files</a></li>
+    </ul>
 
-## Topic 2  
-[Finding Your Way on a Linux System](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic2.md#topic-2)
-### 2.1
-[Command Line Basics](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic2.md#21)
-### 2.2
-[Getting Help on the Command Line](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic2.md#22)
-### 2.3
-[Using Directories and Listing Files](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic2.md#23)
-### 2.4
-[Creating, Moving, and Deleting Files](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic2.md#24)
+    <hr>
 
---- 
+    <h2>Topic 3</h2>
+    <ul>
+        <li><a href="https://bullintheserver.github.io/linuxstudysessions/topic3.html">The Power of the Command Line</a></li>
+        <li><h3>3.1</h3>Archiving Files on the Command Line</li>
+        <li><h3>3.2</h3>Searching and Extracting Data from Files</li>
+        <li><h3>3.3</h3>Turning Commands into a Script</li>
+    </ul>
 
-## Topic 3  
-[The Power of the Command Line](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic3.md#topic-3)  
-### 3.1  
-[Archiving Files on the Command Line](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic3.md#31)  
-### 3.2  
-[Searching and Extracting Data from Files](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic3.md#32)
-### 3.3  
-[Turning Commands into a Script](https://github.com/bullintheserver/linuxstudysessions/blob/main/topic3.md#33)
+    <hr>
 
----
+    <h2>Topic 4</h2>
+    <ul>
+        <li><a href="https://bullintheserver.github.io/linuxstudysessions/topic3.html">The Linux Operating System</a></li>
+        <li><h3>3.1</h3>Lorem ipsum</li>
+        <li><h3>3.2</h3>Lorem ipsum</li>
+        <li><h3>3.3</h3>Lorem ipsum</li>
+    </ul>
 
-## Topic 4
+    <hr>
 
----
+    <h2>Topic 5</h2>
+    <ul>
+        <li><a href="https://bullintheserver.github.io/linuxstudysessions/topic3.html">Security and File Permissions</a></li>
+        <li><h3>5.1</h3>Lorem ipsum</li>
+        <li><h3>5.2</h3>Lorem ipsum</li>
+        <li><h3>5.3</h3>Lorem ipsum</li>
+    </ul>
 
-## Topic 5
+    <hr>
+
+</body>
+</html>
